--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
+    <script src="./send.js"></script>
     <title>vue-liff-bot</title>
   </head>
   <body>
